--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <br></br>
@@ -105,6 +106,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="downButton">Down Button:</label>
@@ -138,6 +140,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="rightButton">Right Button:</label>
@@ -171,6 +174,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="upButton">Up Button:</label>
@@ -204,6 +208,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <br></br>
@@ -239,6 +244,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="triangleButton">Triangle Button:</label>
@@ -272,6 +278,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="r1Button">R1 Button:</label>
@@ -305,6 +312,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="l1Button">L1 Button:</label>
@@ -338,6 +346,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <br></br>
@@ -373,6 +382,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="circleButton">Circle Button:</label>
@@ -406,6 +416,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="r2Button">R2 Button:</label>
@@ -439,6 +450,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
 
         <label for="l2Button">L2 Button:</label>
@@ -472,6 +484,7 @@
             <option value="26">Pink</option>
             <option value="27">Light Pink</option>
             <option value="28">Space Grey</option>
+            <option value="29">Lavender</option>
         </select>
     </div>
 
@@ -531,8 +544,9 @@
             var pink = 'rgb(235, 22, 89)';
             var lightPink = 'rgb(248, 147, 140)';
             var spaceGrey = 'rgb(171, 170, 168)';
+            var lavender = 'rgb(221, 221, 229)';
 
-            var colorsArray = [purple, vanillaCream, white, tan, peach, green, lightGreen, limeGreen, olive, gold, yellow, black, darkGrey, grey, brown, coyoteBrown, babyBlue, navyBlue, blue, peacock, teal, lightBlue, seafoamGreen, red, orange, burntOrange, pink, lightPink, spaceGrey];
+            var colorsArray = [purple, vanillaCream, white, tan, peach, green, lightGreen, limeGreen, olive, gold, yellow, black, darkGrey, grey, brown, coyoteBrown, babyBlue, navyBlue, blue, peacock, teal, lightBlue, seafoamGreen, red, orange, burntOrange, pink, lightPink, spaceGrey, lavender];
 
             //Button Colors
 
